artifacts/test/test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-bash
  namespace: customer2
spec:
  containers:
  - name: alpine
    image: alpine
    command: ["/bin/sh"]
    args: ["-c", "apk add --no-cache curl && while true; do sleep 3600; done"]
  serviceAccountName: webgui-account
